--- a/src/presence_analyzer/templates/presence_start_end.html
+++ b/src/presence_analyzer/templates/presence_start_end.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
-{% block google_load %}
+<%inherit file="base.html"/>
+<%block name="google_load">
     google.load("visualization", "1", {packages: ["corechart", "timeline"], 'language': 'pl'});   
-{% endblock %}
-{% block getJson %}
-$.getJSON("{{ url_for('mean_presence_hours_view', user_id=0) }}"+selected_user, function(result) {
+</%block>
+<%block name="getJson">
+$.getJSON("${url_for('mean_presence_hours_view', user_id=0)}"+selected_user, function(result) {
     $.each(result, function(index, value) {
         value[1] = parseInterval(value[1]);
         value[2] = parseInterval(value[2]);
@@ -26,6 +26,5 @@ $.getJSON("{{ url_for('mean_presence_hours_view', user_id=0) }}"+selected_user, 
     var chart = new google.visualization.Timeline(chart_div[0]);
     chart.draw(data, options);
 });
-{% endblock %}
-{% set active_page = "presence_start_end" %}
-{% block content_title %}Presence mean time{% endblock %}
+</%block>
+<%block name="content_title">Presence mean time</%block>
