--- a/src/presence_analyzer/static/css/style.css
+++ b/src/presence_analyzer/static/css/style.css
@@ -27,18 +27,20 @@ body {
 }
 #header li {
     float: left;
-    border: 1px solid #bbb;
-    border-bottom-width: 0;
-    margin: 0;
+    border-width: 1px 1px 0px;
+    border-style: solid;
+    border-color: #BBB;
+    border-image: none;
+    margin: 0px;
 }
 #header a {
     text-decoration: none;
     display: block;
-    background: #eee;
-    padding: 0.24em 1em;
-    color: #00c;
-    width: 12em;
+    background: #EEE none repeat scroll 0% 0%;
+    padding: 5px;
+    color: #00C;
     text-align: center;
+    padding: 5px 15px;
 }
 #header a:hover {
     background: #ddf;
