--- a/src/presence_analyzer/templates/presence_start_end.html
+++ b/src/presence_analyzer/templates/presence_start_end.html
@@ -3,17 +3,15 @@
     google.load("visualization", "1", {packages: ["corechart", "timeline"], 'language': 'pl'});   
 </%block>
 <%block name="getJson">
-$.getJSON("${url_for('mean_presence_hours_view', user_id=0)}"+selected_user, function(result) {
+$.getJSON("${url_for('mean_presence_hours_view', user_id=0)}"+selected_option, function(result) {
     $.each(result, function(index, value) {
         value[1] = parseInterval(value[1]);
         value[2] = parseInterval(value[2]);
     });
     var data = new google.visualization.DataTable(),
-    options = {
-        hAxis: {title: 'Weekday'}
-    },
-    formatter = new google.visualization.DateFormat(
-        {pattern: 'HH:mm:ss'}
+        options = {hAxis: {title: 'Weekday'}},
+        formatter = new google.visualization.DateFormat(
+            {pattern: 'HH:mm:ss', timezone: 0}
         );
     data.addColumn('string', 'Weekday');
     data.addColumn('datetime', 'Start time (h:m:s)');
@@ -25,6 +23,9 @@ $.getJSON("${url_for('mean_presence_hours_view', user_id=0)}"+selected_user, fun
     loading.hide();
     var chart = new google.visualization.Timeline(chart_div[0]);
     chart.draw(data, options);
+}).fail(function() {
+    chart_div.empty().append("No data avaliable for this user.").show();
+    loading.hide();
 });
 </%block>
 <%block name="content_title">Presence mean time</%block>
